--- a/assets/css/orbit-2.css
+++ b/assets/css/orbit-2.css
@@ -53,7 +53,7 @@ p {
   background: #4CAC9D;
   position: absolute;
   right: 0;
-  width: 240px;
+  width: 270px;
   height: 100%;
   min-height: 1500px;
   color: #fff;
@@ -66,6 +66,8 @@ p {
   background: rgba(0, 0, 0, 0.2);
   text-align: center;
   color: #fff;
+
+
 }
 .sidebar-wrapper .name {
   font-size: 32px;
@@ -81,10 +83,13 @@ p {
   margin-bottom: 0;
 }
 .sidebar-wrapper .profile {
+  border-radius: 10px;
+  width: 80%;
+  height: 80%;
   margin-bottom: 15px;
 }
 .sidebar-wrapper .contact-list .svg-inline--fa {
-  margin-right: 5px;
+  margin-right: 2px;
   font-size: 18px;
   vertical-align: middle;
 }
@@ -277,7 +282,7 @@ p {
   }
 
   .main-wrapper {
-    padding: 30px;
+    padding: 20px;
   }
 
   .main-wrapper .time {
